Cleanup and generate OpenAPI spec
- Use the nested router for the manager endpoints, and clean up the URL space some
- Remove a bunch of extraneous lookups and stuff because it wasn't using the nested router
- For codes, use annotation rather than calculating a bunch of stuff manually and doing extra DB pulls
- Use existing serializers where possible (there wasn't a need to define a separate one for some of these things)
- Split the ContractPageSerializer out so we can have a simpler one and the standard more complex one - also, had "organization" in there twice
- Add annotations to the APIs so they appear in the spec properly

This is getting the Claude output from 90% to closer to 100% - just need a test suite now.
