# openapi/specs/v0.yaml
@@ -193,6 +193,193 @@ paths:
               schema:
                 $ref: '#/components/schemas/CreateB2BEnrollment'
           description: ''
+  /api/v0/b2b/manager/organizations/:
+    get:
+      operationId: b2b_manager_organizations_list
+      description: List organizations available for the current user.
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: ID of the organization
+        required: true
+      tags:
+      - b2b
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OrganizationPage'
+          description: ''
+  /api/v0/b2b/manager/organizations/{parent_lookup_organization}/contracts/:
+    get:
+      operationId: b2b_manager_organizations_contracts_list
+      description: List an organization's contracts.
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: ID of the contract
+        required: true
+      - in: path
+        name: parent_lookup_organization
+        schema:
+          type: integer
+        description: ID of the parent organization
+        required: true
+      tags:
+      - b2b
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/BaseContractPage'
+          description: ''
+  /api/v0/b2b/manager/organizations/{parent_lookup_organization}/contracts/{id}/:
+    get:
+      operationId: b2b_manager_organizations_contracts_retrieve
+      description: List an organization's contracts.
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: ID of the contract
+        required: true
+      - in: path
+        name: parent_lookup_organization
+        schema:
+          type: integer
+        description: ID of the parent organization
+        required: true
+      tags:
+      - b2b
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ManagerContractDetail'
+          description: ''
+  /api/v0/b2b/manager/organizations/{parent_lookup_organization}/contracts/{id}/codes/:
+    get:
+      operationId: b2b_manager_organizations_contracts_codes_retrieve
+      description: |-
+        List enrollment codes for a contract.
+
+        Only shows codes for contracts that require them (non-auto membership types).
+        Logic varies based on whether contract has learner limits.
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: ID of the contract
+        required: true
+      - in: path
+        name: parent_lookup_organization
+        schema:
+          type: integer
+        description: ID of the parent organization
+        required: true
+      tags:
+      - b2b
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ManagerContractDetail'
+          description: ''
+  /api/v0/b2b/manager/organizations/{parent_lookup_organization}/contracts/{id}/course_runs/:
+    get:
+      operationId: b2b_manager_organizations_contracts_course_runs_retrieve
+      description: |-
+        List course runs available for a specific contract.
+
+        GET /api/v0/b2b/orgs/{org_id}/manager/contracts/{contract_id}/course_runs/
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: ID of the contract
+        required: true
+      - in: path
+        name: parent_lookup_organization
+        schema:
+          type: integer
+        description: ID of the parent organization
+        required: true
+      tags:
+      - b2b
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ManagerContractDetail'
+          description: ''
+  /api/v0/b2b/manager/organizations/{parent_lookup_organization}/contracts/{id}/course_runs/{course_run_id}/enrollments/:
+    get:
+      operationId: b2b_manager_organizations_contracts_course_runs_enrollments_retrieve
+      description: List enrollments for a specific course run within a contract.
+      parameters:
+      - in: path
+        name: course_run_id
+        schema:
+          type: string
+        description: Courseware ID to pull enrollments for.
+        required: true
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: ID of the contract
+        required: true
+      - in: path
+        name: parent_lookup_organization
+        schema:
+          type: integer
+        description: ID of the parent organization
+        required: true
+      tags:
+      - b2b
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ManagerContractDetail'
+          description: ''
+  /api/v0/b2b/manager/organizations/{id}/:
+    get:
+      operationId: b2b_manager_organizations_retrieve
+      description: List organizations available for the current user.
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: integer
+        description: ID of the organization
+        required: true
+      tags:
+      - b2b
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrganizationPage'
+          description: ''
   /api/v0/b2b/organizations/:
     get:
       operationId: b2b_organizations_list
@@ -3273,6 +3460,58 @@ components:
       x-enum-descriptions:
       - anytime
       - dated
+    BaseContractPage:
+      type: object
+      description: Simplified serializer for the ContractPage model.
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        name:
+          type: string
+          readOnly: true
+          description: The name of the contract.
+        description:
+          type: string
+          readOnly: true
+          description: Any useful extra information about the contract.
+        membership_type:
+          type: string
+        organization:
+          type: integer
+          readOnly: true
+          description: The organization that owns this contract.
+        contract_start:
+          type: string
+          format: date
+          readOnly: true
+          nullable: true
+          description: The start date of the contract.
+        contract_end:
+          type: string
+          format: date
+          readOnly: true
+          nullable: true
+          description: The end date of the contract.
+        active:
+          type: boolean
+          readOnly: true
+          description: Whether this contract is active or not. Date rules still apply.
+        slug:
+          type: string
+          readOnly: true
+          description: The name of the page as it will appear in URLs e.g http://domain.com/blog/[my-slug]/
+          pattern: ^[-\w]+$
+      required:
+      - active
+      - contract_end
+      - contract_start
+      - description
+      - id
+      - membership_type
+      - name
+      - organization
+      - slug
     BaseCourse:
       type: object
       description: Basic course model serializer
@@ -3657,26 +3896,6 @@ components:
           type: string
           readOnly: true
           description: Any useful extra information about the contract.
-        welcome_message:
-          type: string
-          readOnly: true
-          description: A welcome message for learners.
-        welcome_message_extra:
-          type: string
-          readOnly: true
-          description: Additional welcome message content for learners.
-        integration_type:
-          allOf:
-          - $ref: '#/components/schemas/IntegrationTypeEnum'
-          readOnly: true
-          description: |-
-            The type of integration for this contract.
-
-            * `sso` - SSO
-            * `non-sso` - Non-SSO
-            * `managed` - Managed
-            * `code` - Enrollment Code
-            * `auto` - Auto Enrollment
         membership_type:
           type: string
         organization:
@@ -3704,6 +3923,26 @@ components:
           readOnly: true
           description: The name of the page as it will appear in URLs e.g http://domain.com/blog/[my-slug]/
           pattern: ^[-\w]+$
+        welcome_message:
+          type: string
+          readOnly: true
+          description: A welcome message for learners.
+        welcome_message_extra:
+          type: string
+          readOnly: true
+          description: Additional welcome message content for learners.
+        integration_type:
+          allOf:
+          - $ref: '#/components/schemas/IntegrationTypeEnum'
+          readOnly: true
+          description: |-
+            The type of integration for this contract.
+
+            * `sso` - SSO
+            * `non-sso` - Non-SSO
+            * `managed` - Managed
+            * `code` - Enrollment Code
+            * `auto` - Auto Enrollment
         programs:
           type: array
           items:
@@ -5349,6 +5588,105 @@ components:
       - quantity
       - total_price
       - unit_price
+    ManagerContractDetail:
+      type: object
+      description: Serializer for detailed contract view with statistics.
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        name:
+          type: string
+          readOnly: true
+          description: The name of the contract.
+        description:
+          type: string
+          readOnly: true
+          description: Any useful extra information about the contract.
+        membership_type:
+          type: string
+        organization:
+          type: integer
+          readOnly: true
+          description: The organization that owns this contract.
+        contract_start:
+          type: string
+          format: date
+          readOnly: true
+          nullable: true
+          description: The start date of the contract.
+        contract_end:
+          type: string
+          format: date
+          readOnly: true
+          nullable: true
+          description: The end date of the contract.
+        active:
+          type: boolean
+          readOnly: true
+          description: Whether this contract is active or not. Date rules still apply.
+        slug:
+          type: string
+          readOnly: true
+          description: The name of the page as it will appear in URLs e.g http://domain.com/blog/[my-slug]/
+          pattern: ^[-\w]+$
+        welcome_message:
+          type: string
+          readOnly: true
+          description: A welcome message for learners.
+        welcome_message_extra:
+          type: string
+          readOnly: true
+          description: Additional welcome message content for learners.
+        integration_type:
+          allOf:
+          - $ref: '#/components/schemas/IntegrationTypeEnum'
+          readOnly: true
+          description: |-
+            The type of integration for this contract.
+
+            * `sso` - SSO
+            * `non-sso` - Non-SSO
+            * `managed` - Managed
+            * `code` - Enrollment Code
+            * `auto` - Auto Enrollment
+        programs:
+          type: array
+          items:
+            type: integer
+          readOnly: true
+        attachment_percentage:
+          type: number
+          format: double
+          nullable: true
+          description: Calculate attachment percentage if seat-limited.
+          readOnly: true
+        total_enrollments:
+          type: integer
+          description: Get total number of enrollments across all contract course
+            runs.
+          readOnly: true
+        total_codes:
+          type: integer
+          description: Get total number of discount codes for this contract.
+          readOnly: true
+      required:
+      - active
+      - attachment_percentage
+      - contract_end
+      - contract_start
+      - description
+      - id
+      - integration_type
+      - membership_type
+      - name
+      - organization
+      - programs
+      - slug
+      - total_codes
+      - total_enrollments
+      - welcome_message
+      - welcome_message_extra
     Nested:
       type: object
       properties:
